add commands for creating aggression and create boilplaters for other commands, fix modelds, and add news selectors

--- a/cjvr/templates/cjvr/index.html
+++ b/cjvr/templates/cjvr/index.html
@@ -1,4 +1,8 @@
 {% extends 'cjvr/base.html' %}
 {% block content %}
- <h1>Hello popo</h1>
+<ul>
+    {% for plain in plaintiffs %}
+    <li>{{ plain }}</li>
+    {% endfor %}
+</ul>
 {% endblock%}
