write the code for the services and all the views about testimony, victim and plaintiff

--- a/cjvr/templates/cjvr/plaintiff_detail.html
+++ b/cjvr/templates/cjvr/plaintiff_detail.html
@@ -1,4 +1,10 @@
 {% extends 'cjvr/base.html' %}
 {% block content %}
-<h1>Plaintiff Detail</h1>
+<p>{{ plaintiff.first_name }}</p>
+<p>{{ plaintiff.last_name }}</p>
+<p>{{ plaintiff.age }}</p>
+<p>{{ plaintiff.sex }}</p>
+<p>{{ plaintiff.address }}</p>
+<p>{{ plaintiff.religion }}</p>
+<p>{{ plaintiff.contact }}</p>
 {% endblock %}
