--- a/cjvr/templates/cjvr/testimony_detail.html
+++ b/cjvr/templates/cjvr/testimony_detail.html
@@ -1,4 +1,7 @@
 {% extends 'cjvr/base.html' %}
 {% block content %}
-<h1>Testimony detail</h1>
+<p>{{ testimony.victim }}</p>
+<p>{{ testimony.plaintiff }}</p>
+<p>{{ testimony.description }}</p>
+<p>{{ testimony.register_date }}</p>
 {% endblock %}
