--- a/cjvr/templates/cjvr/index.html
+++ b/cjvr/templates/cjvr/index.html
@@ -2,11 +2,9 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <div>
-    <h3>Plaingnat formulaire</h3>
-    <p>{{ p_form }}</p>
-    <h3>Victim formulaire</h3>
-    <p>{{ v_form }}</p>
-    <h3>Testimony formulaire</h3>
-    <p>{{ t_form }}</p>
+    <p> List des depositions <a href="{% url 'testimonies' %}">ici</a></p>
+    <p> List des victims <a href="{% url 'victims' %}">ici</a></p>
+    <p> List des plaignants <a href="{% url 'plaintiffs' %}">ici</a></p>
+    <p> cree depositions <a href="{% url 'register-testimony' %}">ici</a></p>
 </div>
 {% endblock %}
