add view for graph

--- a/cjvr/templates/cjvr/index.html
+++ b/cjvr/templates/cjvr/index.html
@@ -6,5 +6,6 @@
     <p> List des victims <a href="{% url 'victims' %}">ici</a></p>
     <p> List des plaignants <a href="{% url 'plaintiffs' %}">ici</a></p>
     <p> cree depositions <a href="{% url 'register-testimony' %}">ici</a></p>
+    <p> consulter statistiques et graphes <a href="{% url 'statistics-graph' %}">ici</a></p>
 </div>
 {% endblock %}
