--- a/cjvr/templates/cjvr/statistics_graph.html
+++ b/cjvr/templates/cjvr/statistics_graph.html
@@ -1,5 +1,20 @@
 {% extends 'cjvr/base.html' %}
+{% load static %}
 {% block content %}
+
 <h1>Statistics and graph</h1>
-{{ stats }}
+<!--{{ stats }}-->
+
+<canvas id="myChart" width="100" height="100"></canvas>
+
+ <script src="{%  static 'cjvr/Chart.min.js' %}"></script>
+ <script src="{%  static 'cjvr/jquery-1.10.0.min.js' %}"></script>
+<script type="text/javascript">
+ $.get('{% static 'cjvr/graphics.json' %}', function(data) {
+                var ctx = $("#myChart").get(0).getContext("2d");
+                new Chart(ctx, {
+                    type: 'line', data: data
+                });
+            });
+</script>
 {% endblock %}
