--- a/cjvr/templates/cjvr/statistics_graph.html
+++ b/cjvr/templates/cjvr/statistics_graph.html
@@ -7,8 +7,9 @@
 
 <canvas id="myChart" width="100" height="100"></canvas>
 
- <script src="{%  static 'cjvr/Chart.min.js' %}"></script>
- <script src="{%  static 'cjvr/jquery-1.10.0.min.js' %}"></script>
+ <script src="{%  static 'cjvr/js/Chart.min.js' %}"></script>
+ <script src="{%  static 'cjvr/js/jquery-1.10.0.min.js' %}"></script>
+<!--here -->
 <script type="text/javascript">
  $.get('{% static 'cjvr/graphics.json' %}', function(data) {
                 var ctx = $("#myChart").get(0).getContext("2d");
