--- a/cjvr/templates/cjvr/register_testimony.html
+++ b/cjvr/templates/cjvr/register_testimony.html
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col-xl-6 col-md-6 mb-4 border shadow py-1">
             <h3>Infos plaignant</h3>
-            <p>{{ p_form | crispy }}</p>
+            <p class="">{{ p_form | crispy }}</p>
         </div>
         <div class="col-xl-6 col-md-6 mb-4 border shadow py-1">
             <h3>Infos victime</h3>
