--- a/cjvr/templates/cjvr/testimony_detail.html
+++ b/cjvr/templates/cjvr/testimony_detail.html
@@ -13,14 +13,14 @@
     <div class="card-body">
         <h5 class="card-title text-primary">{{ testimony.plaintiff }}</h5>
         <p class="card-text">
-            Nom: {{ testimony.plaintiff.first_name }} <br>
-            Prenom: {{ testimony.plaintiff.last_name }} <br>
-            Age: {{ testimony.plaintiff.age }} <br>
-            Sexe: {{ testimony.plaintiff.sexe }} <br>
-            Contact: {{ testimony.plaintiff.contact }} <br>
-            Address: {{ testimony.plaintiff.address }} <br>
-            Religion: {{ testimony.plaintiff.religion }} <br>
-            Enregistrer le: {{ testimony.plaintiff.register_date }} <br>
+            <span class="font-weight-bold">Nom:</span> {{ testimony.plaintiff.first_name }} <br>
+             <span class="font-weight-bold">Prenom:</span> {{ testimony.plaintiff.last_name }} <br>
+             <span class="font-weight-bold">Age:</span> {{ testimony.plaintiff.age }} <br>
+             <span class="font-weight-bold">Sexe:</span> {{ testimony.plaintiff.sexe }} <br>
+             <span class="font-weight-bold">Contact:</span> {{ testimony.plaintiff.contact }} <br>
+             <span class="font-weight-bold">Address:</span> {{ testimony.plaintiff.address }} <br>
+             <span class="font-weight-bold">Religion:</span> {{ testimony.plaintiff.religion }} <br>
+             <span class="font-weight-bold">Enregistrer le:</span> {{ testimony.plaintiff.register_date }} <br>
         </p>
     </div>
 </div>
@@ -29,17 +29,17 @@
     <div class="card-body">
         <h5 class="card-title text-danger">{{ testimony.victim }}</h5>
         <p class="card-text">
-            Nom: {{ testimony.victim.first_name }} <br>
-            Prenom: {{ testimony.victim.last_name }} <br>
-            Age: {{ testimony.victim.age }} <br>
-            Sexe: {{ testimony.victim.sexe }} <br>
-            Contact: {{ testimony.victim.contact }} <br>
-            Address: {{ testimony.victim.address }} <br>
-            Religion: {{ testimony.victim.religion }} <br>
-            status: {{ testimony.victim.status }} <br>
-            Lieu d'aggression: {{ testimony.victim.aggression_place }} <br>
-            Enregistrer le: {{ testimony.victim.register_date }} <br>
-            Aggressions subis: {% for aggression in testimony.victim.aggressions.all %}
+            <span class="font-weight-bold">Nom:</span> {{ testimony.victim.first_name }} <br>
+            <span class="font-weight-bold">Prenom:</span> {{ testimony.victim.last_name }} <br>
+            <span class="font-weight-bold">Age:</span> {{ testimony.victim.age }} <br>
+            <span class="font-weight-bold">Sexe:</span> {{ testimony.victim.sexe }} <br>
+            <span class="font-weight-bold">Contact:</span> {{ testimony.victim.contact }} <br>
+            <span class="font-weight-bold">Address:</span> {{ testimony.victim.address }} <br>
+            <span class="font-weight-bold">Religion:</span> {{ testimony.victim.religion }} <br>
+            <span class="font-weight-bold">status:</span> {{ testimony.victim.status }} <br>
+            <span class="font-weight-bold">Lieu d'aggression:</span> {{ testimony.victim.aggression_place }} <br>
+           <span class="font-weight-bold"> Enregistrer le:</span> {{ testimony.victim.register_date }} <br>
+            <span class="font-weight-bold">Aggressions subis:</span> {% for aggression in testimony.victim.aggressions.all %}
             {{ aggression }} ,
             {% endfor %}
         </p>
