--- a/cjvr/templates/cjvr/testimony_list.html
+++ b/cjvr/templates/cjvr/testimony_list.html
@@ -10,8 +10,8 @@
 <div class="card">
     <h5 class="card-header">Deposition No {{ testimony.id }}</h5>
     <div class="card-body">
-        <h5 class="card-title">Enregistrer le : {{ testimony.register_date }}</h5>
-        <p class="card-text"> Plaignant : {{ testimony.plaintiff }} <br>Victime: {{ testimony.victim }} </p>
+        <h5 class="card-title"> <b>Enregistrer le :</b> {{ testimony.register_date }}</h5>
+        <p class="card-text"> <b>Plaignant :</b> {{ testimony.plaintiff }} <br><b>Victime:</b> {{ testimony.victim }} </p>
         <a class="btn btn-outline-primary" href="{% url 'testimony-detail' testimony.id %}">Detail</a>
     </div>
 </div>
