--- a/cjvr/templates/cjvr/victim_detail.html
+++ b/cjvr/templates/cjvr/victim_detail.html
@@ -4,17 +4,17 @@
     <div class="card-body">
         <h5 class="card-title text-danger">{{ victim }}</h5>
         <p class="card-text">
-            Nom: {{ victim.first_name }} <br>
-            Prenom: {{ victim.last_name }} <br>
-            Age: {{ victim.age }} <br>
-            Sexe: {{ victim.sexe }} <br>
-            Contact: {{ victim.contact }} <br>
-            Address: {{ victim.address }} <br>
-            Religion: {{ victim.religion }} <br>
-            status: {{ victim.status }} <br>
-            Lieu d'aggression: {{ victim.aggression_place }} <br>
-            Enregistrer le: {{ victim.register_date }} <br>
-            Aggressions subis: {% for aggression in victim.aggressions.all %}
+            <span class="font-weight-bold">Nom:</span> {{ victim.first_name }} <br>
+            <span class="font-weight-bold">Prenom:</span> {{ victim.last_name }} <br>
+            <span class="font-weight-bold">Age:</span> {{ victim.age }} <br>
+            <span class="font-weight-bold">Sexe:</span> {{ victim.sexe }} <br>
+            <span class="font-weight-bold">Contact:</span> {{ victim.contact }} <br>
+            <span class="font-weight-bold">Address:</span> {{ victim.address }} <br>
+            <span class="font-weight-bold">Religion:</span> {{ victim.religion }} <br>
+            <span class="font-weight-bold">status:</span> {{ victim.status }} <br>
+            <span class="font-weight-bold">Lieu d'aggression:</span> {{ victim.aggression_place }} <br>
+            <span class="font-weight-bold">Enregistrer le:</span> {{ victim.register_date }} <br>
+            <span class="font-weight-bold">Aggressions subis:</span> {% for aggression in victim.aggressions.all %}
             {{ aggression }} ,
             {% endfor %}
         </p>
