--- a/cjvr/templates/cjvr/register_testimony.html
+++ b/cjvr/templates/cjvr/register_testimony.html
@@ -6,20 +6,20 @@
 </div>
 <form method="POST">
     {% csrf_token %}
-    <div class="row">
-        <div class="col-xl-6 col-md-6 mb-4 border shadow py-1">
+     <div class="row">
+        <div class="col-xl-6 col-md-6 mb-4">
             <h3>Infos plaignant</h3>
             <p class="">{{ p_form | crispy }}</p>
         </div>
-        <div class="col-xl-6 col-md-6 mb-4 border shadow py-1">
+        <div class="col-xl-6 col-md-6 mb-4">
             <h3>Infos victime</h3>
             <p>{{ v_form | crispy }}</p>
         </div>
-        <div class="col-xl-6 col-md-6 mb-4 border shadow py-1">
+        <div class="col-xl-6 col-md-6 mb-4">
             <h3>Decrivez la scene</h3>
             <p>{{ t_form | crispy }}</p>
         </div>
     </div>
-    <button class="btn btn-primary" type="submit">Enregister</button>
+    <button class="btn btn-outline-primary" type="submit">Enregister</button>
 </form>
 {% endblock %}
