--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -22,6 +22,12 @@
 </head>
 <body>
 <div class="container">
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags}}">
+        {{ message }}
+    </div>
+    {% endfor %}
+    {% endif %}
     <div class="row">
         <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
             <div class="card card-signin my-5">
