--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -22,6 +22,7 @@
 </head>
 <body>
 <div class="container">
+    {% if messages %}
     {% for message in messages %}
     <div class="alert alert-{{ message.tags}}">
         {{ message }}
