--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -16,6 +16,8 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
     <!-- Custom styles for this template-->
     <link href="{% static 'users/main.css' %}" rel="stylesheet">
 
@@ -40,7 +42,7 @@
                             {{ form | crispy }}
                         </fieldset>
                         <div class="form-group">
-                            <button class="btn btn-outline-info" type="submit">Connectez Vous</button>
+                            <button class="btn btn-outline-primary" type="submit">Connectez Vous</button>
                         </div>
                     </form>
                     <div class="border-top pt-3">
