--- a/cjvr/templates/cjvr/base.html
+++ b/cjvr/templates/cjvr/base.html
@@ -115,7 +115,9 @@
                 </button>
 
                 <!-- Top search bar -->
-                <form accept-charset="utf-8" action="{% url 'search' %}" class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search" id="searchform"
+                <form accept-charset="utf-8" action="{% url 'search' %}"
+                      class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
+                      id="searchform"
                       method="get">
                     <input class="searchfield" id="searchbox" name="q" placeholder="Search" type="text">
                     <button class="btn btn-primary" type="submit">
@@ -157,17 +159,17 @@
                            data-toggle="dropdown"
                            href="#" id="userDropdown" role="button">
                             <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{ user.username }}</span>
-                            <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
+                            <img class="img-profile rounded-circle" src="{{ user.profile.image.url }}">
                         </a>
                         <!-- Dropdown - User Information -->
                         <div aria-labelledby="userDropdown"
                              class="dropdown-menu dropdown-menu-right shadow animated--grow-in">
-                            <a class="dropdown-item" href="#">
+                            <a class="dropdown-item" href="{% url 'profile' %}">
                                 <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                 Profile
                             </a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" data-target="#logoutModal" data-toggle="modal"
+                            <a class="dropdown-item"
                                href="{% url 'logout' %}">
                                 <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                                 Logout
@@ -180,6 +182,13 @@
 
             <!-- Begin Page Content -->
             <div class="container-fluid">
+                {% if messages %}
+                {% for message in messages %}
+                <div class="alert alert-{{ message.tags}}">
+                    {{ message }}
+                </div>
+                {% endfor %}
+                {% endif %}
                 {% block content %}
                 {% endblock %}
             </div>
