--- a/cjvr/templates/cjvr/task_list.html
+++ b/cjvr/templates/cjvr/task_list.html
@@ -8,7 +8,7 @@
 </div>
 <div class="row">
     {% for task in tasks %}
-    <div class="card border-primary mb-3" style="max-width: 18rem;">
+    <div class="card border-primary mb-3">
         <div class="card-header">{{ task.name }}</div>
         <div class="card-body text-primary">
             <p class="card-text">{{ task.description }}</p>
