--- a/cjvr/templates/cjvr/victim_detail.html
+++ b/cjvr/templates/cjvr/victim_detail.html
@@ -18,7 +18,7 @@
             {{ aggression }} ,
             {% endfor %}
         </p>
-        <a class="btn btn-outline-primary" href="#" type="button">Ajouter deposition</a>
+        <!--<a class="btn btn-outline-primary" href="#" type="button">Ajouter deposition</a>-->
         <a class="btn btn-outline-danger" href="{% url 'delete-victim' victim.id %}" type="button">Supprimer</a>
         <a class="btn btn-outline-secondary" href="{% url 'victims' %}" type="button">Retour</a>
     </div>
