--- a/cjvr/templates/cjvr/task_list.html
+++ b/cjvr/templates/cjvr/task_list.html
@@ -14,7 +14,7 @@
             <p class="card-text">{{ task.description }}</p>
             <b>Start date:</b> {{ task.start_date }} <br>
             <b>End date:</b> {{ task.end_date }}
-            <b>Cree par:</b> {{ task.user.get_full_name }}
+            <b>Cree par:</b> {{ task.user.username }}
         </div>
         <div class="card-footer">
             <a class="btn btn-outline-danger" href="{% url 'delete-task' task.id %}">Supprimer</a>
