--- a/cjvr/templates/cjvr/register_testimony.html
+++ b/cjvr/templates/cjvr/register_testimony.html
@@ -4,7 +4,7 @@
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
     <h1 class="h3 mb-0 text-gray-800">Nouvelle Deposition</h1>
 </div>
-<form method="POST">
+<form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="row">
         <div class="col-xl-6 col-md-6 mb-4">
@@ -19,7 +19,6 @@
             <h3>Decrivez la scene</h3>
             <p>{{ t_form | crispy }}</p>
         </div>
-
     </div>
     <button class="btn btn-outline-primary" type="submit">Enregister</button>
 </form>
