--- a/cjvr/templates/cjvr/add_victim.html
+++ b/cjvr/templates/cjvr/add_victim.html
@@ -2,13 +2,13 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
-    <h1 class="h3 mb-0 text-gray-800">Decrivez la scene</h1>
+    <h1 class="h3 mb-0 text-gray-800">Infos victim</h1>
 </div>
 <form method="POST">
     {% csrf_token %}
-    {{ t_form | crispy }}
+    {{ v_form | crispy }}
     <br>
-    <button class="btn btn-outline-primary" type="submit">Enregister</button>
+    <button class="btn btn-outline-primary" type="submit">Suivant</button>
     <a class="btn btn-outline-secondary" href="{% url 'testimonies' %}">Retour</a>
 </form>
 {% endblock %}
