--- a/cjvr/templates/cjvr/base.html
+++ b/cjvr/templates/cjvr/base.html
@@ -26,12 +26,12 @@
 <div id="wrapper">
 
     <!-- Sidebar -->
-    <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+    <ul class="navbar-nav bg-dark sidebar sidebar-dark accordion" id="accordionSidebar">
 
         <!-- Sidebar - Brand -->
         <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'testimonies' %}">
             <div class="sidebar-brand-icon rotate-n-15">
-                <i class="fas fa-laugh-wink"></i>
+                <i class="fas fa-grin-tears"></i>
             </div>
             <div class="sidebar-brand-text mx-3">CJVR MANAGER</div>
         </a>
@@ -120,7 +120,7 @@
                       id="searchform"
                       method="get">
                     <input class="searchfield" id="searchbox" name="q" placeholder="Search" type="text">
-                    <button class="btn btn-primary" type="submit">
+                    <button class="btn btn-dark" type="submit">
                         <i class="fas fa-search fa-sm"></i>
                     </button>
                 </form>
