--- a/cjvr/templates/cjvr/base.html
+++ b/cjvr/templates/cjvr/base.html
@@ -17,6 +17,7 @@
 
     <!-- Custom styles for this template-->
     <link href="{% static 'cjvr/css/sb-admin-2.min.css' %}" rel="stylesheet">
+     <link href="{% static 'cjvr/css/main.css' %}" rel="stylesheet">
 
 </head>
 
@@ -26,22 +27,19 @@
 <div id="wrapper">
 
     <!-- Sidebar -->
-    <ul class="navbar-nav bg-dark sidebar sidebar-dark accordion" id="accordionSidebar">
+    <ul class="navbar-nav bg-gradient-info sidebar sidebar-dark accordion" id="accordionSidebar">
 
         <!-- Sidebar - Brand -->
         <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'testimonies' %}">
             <div class="sidebar-brand-icon rotate-n-15">
-                <i class="fas fa-grin-tears"></i>
+                <i class="fas fa-globe-africa"></i>
             </div>
             <div class="sidebar-brand-text mx-3">CJVR MANAGER</div>
         </a>
 
-        <!-- Divider -->
-        <hr class="sidebar-divider my-0">
-
         <!-- Nav Item - Dashboard -->
         <li class="nav-item active">
-            <a class="nav-link" href="{% url 'testimonies' %}">
+            <a class="nav-link">
                 <i class="fas fa-fw fa-tachometer-alt"></i>
                 <span>Dashboard</span></a>
         </li>
@@ -120,7 +118,7 @@
                       id="searchform"
                       method="get">
                     <input class="searchfield" id="searchbox" name="q" placeholder="Search" type="text">
-                    <button class="btn btn-dark" type="submit">
+                    <button class="btn btn-info" type="submit">
                         <i class="fas fa-search fa-sm"></i>
                     </button>
                 </form>
