fix issue with sex not showing

--- a/cjvr/templates/cjvr/testimony_detail.html
+++ b/cjvr/templates/cjvr/testimony_detail.html
@@ -16,7 +16,7 @@
             <span class="font-weight-bold">Nom:</span> {{ testimony.plaintiff.first_name }} <br>
              <span class="font-weight-bold">Prenom:</span> {{ testimony.plaintiff.last_name }} <br>
              <span class="font-weight-bold">Age:</span> {{ testimony.plaintiff.age }} <br>
-             <span class="font-weight-bold">Sexe:</span> {{ testimony.plaintiff.sexe }} <br>
+             <span class="font-weight-bold">Sexe:</span> {{ testimony.plaintiff.sex }} <br>
              <span class="font-weight-bold">Contact:</span> {{ testimony.plaintiff.contact }} <br>
              <span class="font-weight-bold">Address:</span> {{ testimony.plaintiff.address }} <br>
              <span class="font-weight-bold">Religion:</span> {{ testimony.plaintiff.religion }} <br>
@@ -32,7 +32,7 @@
             <span class="font-weight-bold">Nom:</span> {{ testimony.victim.first_name }} <br>
             <span class="font-weight-bold">Prenom:</span> {{ testimony.victim.last_name }} <br>
             <span class="font-weight-bold">Age:</span> {{ testimony.victim.age }} <br>
-            <span class="font-weight-bold">Sexe:</span> {{ testimony.victim.sexe }} <br>
+            <span class="font-weight-bold">Sexe:</span> {{ testimony.victim.sex }} <br>
             <span class="font-weight-bold">Contact:</span> {{ testimony.victim.contact }} <br>
             <span class="font-weight-bold">Address:</span> {{ testimony.victim.address }} <br>
             <span class="font-weight-bold">Religion:</span> {{ testimony.victim.religion }} <br>
