--- a/cjvr/templates/cjvr/victim_detail.html
+++ b/cjvr/templates/cjvr/victim_detail.html
@@ -7,7 +7,7 @@
             <span class="font-weight-bold">Nom:</span> {{ victim.first_name }} <br>
             <span class="font-weight-bold">Prenom:</span> {{ victim.last_name }} <br>
             <span class="font-weight-bold">Age:</span> {{ victim.age }} <br>
-            <span class="font-weight-bold">Sexe:</span> {{ victim.sexe }} <br>
+            <span class="font-weight-bold">Sexe:</span> {{ victim.sex }} <br>
             <span class="font-weight-bold">Contact:</span> {{ victim.contact }} <br>
             <span class="font-weight-bold">Address:</span> {{ victim.address }} <br>
             <span class="font-weight-bold">Religion:</span> {{ victim.religion }} <br>
