--- a/cjvr/templates/cjvr/plaintiff_detail.html
+++ b/cjvr/templates/cjvr/plaintiff_detail.html
@@ -7,7 +7,7 @@
             <b> Nom: </b>{{ plaintiff.first_name }} <br>
             <b>Prenom:</b> {{ plaintiff.last_name }} <br>
             <b>Age:</b> {{ plaintiff.age }} <br>
-            <b>Sexe:</b> {{ plaintiff.sexe }} <br>
+            <b>Sexe:</b> {{ plaintiff.sex }} <br>
             <b>Contact:</b> {{ plaintiff.contact }} <br>
             <b>Address:</b> {{ plaintiff.address }} <br>
             <b>Religion:</b> {{ plaintiff.religion }} <br>
