change profile update button color

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -18,7 +18,7 @@
                 {{ p_form | crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-primary" type="submit">Mettre a jour</button>
+                <button class="btn btn-outline-info" type="submit">Mettre a jour</button>
             </div>
         </form>
     </div>
