add staging app to heroku and add <br> to the task list view

--- a/cjvr/templates/cjvr/task_list.html
+++ b/cjvr/templates/cjvr/task_list.html
@@ -14,7 +14,7 @@
             <div class="card-body">
                 <p class="card-text">{{ task.description }}</p>
                 <b>Start date:</b> {{ task.start_date }} <br>
-                <b>End date:</b> {{ task.end_date }}
+                <b>End date:</b> {{ task.end_date }} <br>
                 <b>Cree par:</b> {{ task.user.username }}
             </div>
             <div class="card-footer">
