add cache settings, add tests for users app, write down boilplater for cjvr tests and add button and view for generating pdf

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -43,7 +43,7 @@
                             {{ form | crispy }}
                         </fieldset>
                         <div class="form-group">
-                            <button class="btn btn-outline-primary" type="submit">Connectez Vous</button>
+                            <button class="btn btn-outline-primary" name="login" type="submit">Connectez Vous</button>
                         </div>
                     </form>
                     <div class="border-top pt-3">
