--- a/cjvr/templates/cjvr/testimony_detail.html
+++ b/cjvr/templates/cjvr/testimony_detail.html
@@ -3,24 +3,22 @@
 <!-- Page Heading -->
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
     <h1 class="h3 mb-0 text-gray-800">Deposition No {{ testimony.id }}</h1>
-    {% if not report %}
     <a class="d-none d-sm-inline-block btn btn-sm btn-info shadow-sm"
-       href="{% url 'register-report' testimony.id %}"><i
-            class="fas fa-plus fa-sm text-white-50"></i>Cree Rapport</a>
-    {% endif %}
+       href="{% url 'generate-pdf' testimony.id %}"><i
+            class="fas fa-download fa-sm text-white-50"></i>Generer Pdf</a>
 </div>
 <div class="card border-left-info shadow py-2">
     <div class="card-body">
         <h5 class="card-title text-info">{{ testimony.plaintiff }}</h5>
         <p class="card-text">
             <span class="font-weight-bold">Nom:</span> {{ testimony.plaintiff.first_name }} <br>
-             <span class="font-weight-bold">Prenom:</span> {{ testimony.plaintiff.last_name }} <br>
-             <span class="font-weight-bold">Age:</span> {{ testimony.plaintiff.age }} <br>
-             <span class="font-weight-bold">Sexe:</span> {{ testimony.plaintiff.sex }} <br>
-             <span class="font-weight-bold">Contact:</span> {{ testimony.plaintiff.contact }} <br>
-             <span class="font-weight-bold">Address:</span> {{ testimony.plaintiff.address }} <br>
-             <span class="font-weight-bold">Religion:</span> {{ testimony.plaintiff.religion }} <br>
-             <span class="font-weight-bold">Enregistrer le:</span> {{ testimony.plaintiff.register_date }} <br>
+            <span class="font-weight-bold">Prenom:</span> {{ testimony.plaintiff.last_name }} <br>
+            <span class="font-weight-bold">Age:</span> {{ testimony.plaintiff.age }} <br>
+            <span class="font-weight-bold">Sexe:</span> {{ testimony.plaintiff.sex }} <br>
+            <span class="font-weight-bold">Contact:</span> {{ testimony.plaintiff.contact }} <br>
+            <span class="font-weight-bold">Address:</span> {{ testimony.plaintiff.address }} <br>
+            <span class="font-weight-bold">Religion:</span> {{ testimony.plaintiff.religion }} <br>
+            <span class="font-weight-bold">Enregistrer le:</span> {{ testimony.plaintiff.register_date }} <br>
         </p>
     </div>
 </div>
@@ -38,8 +36,9 @@
             <span class="font-weight-bold">Religion:</span> {{ testimony.victim.religion }} <br>
             <span class="font-weight-bold">status:</span> {{ testimony.victim.status }} <br>
             <span class="font-weight-bold">Lieu d'aggression:</span> {{ testimony.victim.aggression_place }} <br>
-           <span class="font-weight-bold"> Enregistrer le:</span> {{ testimony.victim.register_date }} <br>
-            <span class="font-weight-bold">Aggressions subis:</span> {% for aggression in testimony.victim.aggressions.all %}
+            <span class="font-weight-bold"> Enregistrer le:</span> {{ testimony.victim.register_date }} <br>
+            <span class="font-weight-bold">Aggressions subis:</span>
+            {% for aggression in testimony.victim.aggressions.all %}
             {{ aggression }} ,
             {% endfor %}
         </p>
@@ -67,11 +66,11 @@
 </div>
 {% endif %}
 <br>
-<br>
 <div aria-label="Basic example" class="btn-group" role="group">
+    {% if not report %}
+    <a class="btn btn-outline-info" href="{% url 'register-report' testimony.id %}" type="button">Ecrire rapport</a>
+    {% endif %}
     <a class="btn btn-outline-danger" href="{% url 'delete-testimony' testimony.id %}" type="button">Supprimer</a>
     <a class="btn btn-outline-secondary" href="{% url 'testimonies' %}" type="button">Retour</a>
 </div>
-<br>
-<br>
 {% endblock %}
